# mcp-server-python

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  build_and_run.sh  compose.yml  continue.dev.json  mcp_tool.py  pyproject.toml  requirements.txt
.continue/mcpServers/: python-mcp-server.yaml
git_hooks/: install-hooks  pre-commit  pre-push
mcp_trusted_python/: mcp_tool.py  parse_args.py  transport_selector.py
tests/: test_mcp_tool.py  test_parse_args.py  test_transport_selector.py
