[project]
name = "mcp-trusted-python"
# version = "0.0.0"
dynamic = ["version"]
description = "Support Python development with checkers and a scoped interpreter"
readme = "README.md"
authors = [
    {name = "Charlie Todd", email = "github@zerolagtime.link"},
]
license = {file = "LICENSE"}
dependencies = [
    "mcp",
    "ruff",
    "ty",
    "bandit[toml]",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "python-dotenv",
    "pydantic"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "hatch",
    "hatch-vcs",
    "keyring"
]

[project.urls]
Homepage = "https://github.com/zerolagtime/mcp-trusted-python"
Repository = "https://github.com/zerolagtime/mcp-trusted-python"
Issues = "https://github.com/zerolagtime/mcp-trusted-python/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project.scripts]
mcp-trusted-python = "mcp_trusted_python.mcp_tool:main"

[tool.hatch.version]
source = "vcs"

# [tool.hatch.version.raw-options]
# tag-pattern = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"